
Change Log

2014-11-05
	Fixed SPAWN-COMMAND help page. (ext/, help/)
2014-11-03
	Fixed some warnings in util/rpp.c (not used outside of build).
2014-10-31
	Fixed a few potential GC leaks. (s9.c, s9-real.c)
2014-08-08
	Changed hash function. (s9.c)
2014-08-04
	Fix: wrong magic number in 64-bit image check. (s9.c)
2014-08-03
	Missing help link: REAL? (help/, util/)
2014-07-25
	Fix: MAKE-MATCHER accidentally redefined CASE using an equivalent
	but less efficient version. (lib/)
2014-07-21
	Simplified LET* (s9.scm)
2014-07-18
	Made LENGTH and LIST-TAIL use integers internally. (s9.c)
2014-07-17
	Made the fatal error handler print "fatal " to stderr when running
	in batch mode. (s9.c)
2014-07-16
	Added the "99 bottles" example (using SYNTAX-RULES). (contrib/)
2014-07-12
	Fix: STRING->SYMBOL, SYMBOL->STRING, STRING-APPEND and STRING-COPY
	work on counted strings now. (s9.c)
	Fixed embarassing crash when reporting type errors, introduced
	four days ago when changing the primitive procedure representation.
	(s9.c)
2014-07-11
	Applied some small cosmetical fixes. (s9.c)
2014-07-10
	Renamed symbols beginning with an underscore for increased
	portability. (s9.c, s9.h, s9-real.c)
2014-07-09
	Removed binary ID from magic header, added number of primitives
	instead. (s9.c)
2014-07-08
	Made the reader report the location where an delimited list
	started. (s9.c)
	Invented a new method for storing primitive procedures in images
	in a way that cooperates well with ASLR and PIC. (s9.c)
2014-06-29
	Made APROPOS (and ,a) return _all_ procedures, even those not
	currently loaded. (contrib/)
	Patch from http://github.com/barak/scheme9: intercept file read
	errors when reading an image file. Thanks, Barak! (s9.c)
	Added and documented EVAL procedure. (s9.c)
2014-06-27
	Made EDOC source code a better example of EDOC.
	(prog/edoc.scm.edoc)
2014-06-25
	Removed S9E, the S9 Editor, because it was broken. (contrib/)
2014-05-30
	Fixed some bogus warnings generated by Clang.
2014-01-11