@@ -7,16 +7,16 @@
 	S9fES is a mature, portable, and comprehensible public-domain
 	interpreter for R4RS Scheme offering
 
-	- decimal-based real number arithmetics;
-	- support for low-level Unix programming;
-	- cursor addressing with Curses;
-	- basic networking procedures;
-	- loads of useful library functions;
+	- decimal-based real number arithmetics
+	- support for low-level Unix programming
+	- cursor addressing with Curses
+	- basic networking procedures
+	- loads of useful library functions
 
 	It is written in ANSI C (C89) and Scheme and it runs in many
 	popular environments, including *BSD, Linux, Plan 9, and the
 	unmentionable horror (although the Plan 9 and Horror versions
-	probably exclude most of the above goodies).
+	probably exclude some of the above goodies).
 
 	The S9fES code strives to be simple and comprehensible. It is
 	particularly interesting to people who want to
@@ -31,12 +31,12 @@
 	is available in print and PDF format. See http://t3x.org/s9book/
 
 	S9fES supports the following SRFI's: 
-	- SRFI-0: feature-based conditional expansion (subset)
-	- SRFI-2: AND-LET*                            (subset)
+	- SRFI-0:  feature-based conditional expansion (subset)
+	- SRFI-2:  AND-LET*                            (subset)
 	- SRFI-22: running Scheme scripts on Unix
 	- SRFI-23: error reporting mechanism
 	- SRFI-30: nested multi-line comments
-	- SRFI-43: VECTOR-COPY and VECTOR-APPEND only (subset)
+	- SRFI-43: vector library                      (subset)
 
 
 	QUICK START
@@ -47,7 +47,7 @@
 	The S9 code is only loosely coupled to its Makefile, so in most
 	cases running "cc -Dunix -o s9 s9.c" or "8c -Dplan9 -o s9 s9.c"
 	will compile the interpreter just fine. (However, doing so will
-	not include the RealNum/Unix/Curses/Networking extensions.)
+	not include the Realnum/Unix/Curses/Networking extensions.)
 
 	On most systems of the Unix family (plus CygWin and MinGW),
 	you can compile and install S9fES by running "make install".
@@ -98,7 +98,7 @@
 
 	  ".:~/s9fes:/usr/local/share/s9fes"
 
-	  Security-sensitive people may consider removing the dot.
+	  Security-sensitive people may consider (re)moving the dot.
 
 	- Copy the "s9" binary to a location where it can be executed
 	  (e.g. /usr/local/bin).
@@ -124,7 +124,7 @@
 
 	- Copy the content of the "contrib" directory to LIBDIR. These
 	  files contain additional Scheme functions contributed by other
-	  authors or imported from various sources.
+	  authors and/or imported from various sources.
 
 	- Create a subdirectory named "help" in LIBDIR and copy the
 	  content of the "help" directory to LIBDIR/help. These files
@@ -201,8 +201,8 @@
 
 	Bakul Shah, Barak Pearlmutter, Blake McBride, Bsamograd (reddit),
 	Dig1 (reddit), Dirk Lutzebaeck, Doug Currie, Mario Deilmann,
-	Masaru KIMURA, Torsten Leibold, Yi Dai, and the Super Dimension
-	Fortress (SDF.ORG).
+	Masaru KIMURA, Ray Lai, Torsten Leibold, Yi Dai, and the Super
+	Dimension Fortress (SDF.ORG).
 
 
 	CONTACT
