@@ -1,8 +1,8 @@
-53375 72 ./CHANGES
+61379 73 ./CHANGES
 12171 2 ./LICENSE
-15247 9 ./Makefile
-29121 7 ./README
-30496 114 ./s9.c
+270 9 ./Makefile
+2652 7 ./README
+29107 114 ./s9.c
 41089 38 ./contrib/format.scm
 10781 11 ./contrib/format.txt
 39931 9 ./contrib/format-test.scm
@@ -15,9 +15,9 @@
 17877 2 ./contrib/zebra.scm
 23825 18 ./contrib/s9sos.scm
 61572 29 ./contrib/s9sos.txt
-9049 24 ./contrib/scm2html.scm
+35733 24 ./contrib/scm2html.scm
 64650 3 ./contrib/scheme.css
-4914 16 ./contrib/c2html.scm
+50976 16 ./contrib/c2html.scm
 54339 1 ./contrib/ccode.css
 63279 9 ./contrib/S9Book
 8463 9 ./contrib/S9Book-bw
@@ -181,14 +181,14 @@
 46739 4 ./lib/char-plot.scm
 2895 2 ./lib/collect.scm
 61108 13 ./s9.h
-61708 1 ./mkfile
+19987 1 ./mkfile
 30431 16 ./s9.1
-60082 17 ./s9-real.c
+55290 17 ./s9-real.c
 3265 6 ./util/rpp.c
 53688 1 ./util/rp_html
 39589 63 ./util/test.scm
 35198 29 ./util/libtest.scm
-61186 2 ./util/libtest.sh
+23456 2 ./util/libtest.sh
 6554 1 ./util/dirhead
 53114 10 ./util/descriptions
 62845 1 ./util/dirtail
@@ -210,7 +210,7 @@
 55880 2 ./util/procedures.scm
 47920 1 ./util/blurb
 3386 1 ./TODO
-7091 1 ./config.scm
+14661 1 ./config.scm
 37423 2 ./prog/c2html1.scm
 37734 9 ./prog/s9resolve.scm
 39328 3 ./prog/soccat.scm
@@ -592,9 +592,9 @@
 3086 1 ./help/argv
 5538 8 ./help/INDEX
 21889 1 ./help/bottles
-9696 35 ./edoc/s9-real.c.edoc
+11472 35 ./edoc/s9-real.c.edoc
 36186 25 ./edoc/s9-real.scm.edoc
-53121 266 ./edoc/s9.c.edoc
+32197 266 ./edoc/s9.c.edoc
 14448 44 ./edoc/s9.h.edoc
 64871 47 ./edoc/s9.scm.edoc
 13459 4 ./edoc/Makefile
