@@ -1,6 +1,18 @@
 
 Change Log
 
+2014-12-06
+	Fix: LENGTH would print garbage when reporting an improper list.
+	(s9.c) Thanks, David Person!
+2014-11-26
+	Added new Plan 9 mkfile and straightened out the build process
+	on non-Unix systems. Thanks, Ray Lai!
+2014-11-25
+	Modified util/libtest.sh to not include the Unix extension tests
+	when the Unix extension is not present.
+2014-11-24
+	Fix: replaced atol() with internal version to work around Plan 9
+	atol()'s behavior (leading '0' means octal). (s9.c, s9-real.c)
 2014-11-05
 	Fixed SPAWN-COMMAND help page. (ext/, help/)
 2014-11-03
